--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <img src="./img/logo1.jpg" alt="#DeLaADentalCenter">
     <p> DESCRIPCION DEL CONSULTORIO VIDA PASION Y MUERTE. :'( </p>
     <p> ES AQUI DONDE EXPONDREMOS MAS AL DETALLE LOS DATOS DEL CONSULTORIO DENTAL
-      A LOS USUARIOS.</p>
+      A LOS USUARIOS JM.</p>
     <nav>
       <a href="https://www.facebook.com/sandra.delaa.737/" target="_blank" title="Facebook">
         <i class="fab fa-facebook"></i>
