--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="shortcut icon" type="image/png" href="./img/ProgramadorFitness.png">
-  <link rel="apple-touch-icon" href="./ProgramadorFitness.png">
-  <link rel="apple-touch-startup-image" href="./ProgramadorFitness.png">
+  <link rel="shortcut icon" type="image/png" href="./img/logox1024.png">
+  <link rel="apple-touch-icon" href="./logox1024.png">
+  <link rel="apple-touch-startup-image" href="./logox1024.png">
   <link rel="manifest" href="./manifest.json">
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
@@ -26,10 +26,10 @@
 <body>
   <header class="Header">
     <h1>Consultorio Dental Integral "De La A Dental Center"</h1>
-    <img src="./img/logo1.jpg" alt="#DeLaADentalCenter">
+    <img src="./img/logo1.png" alt="#DeLaADentalCenter">
     <p> DESCRIPCION DEL CONSULTORIO VIDA PASION Y MUERTE. :'( </p>
     <p> ES AQUI DONDE EXPONDREMOS MAS AL DETALLE LOS DATOS DEL CONSULTORIO DENTAL
-      A LOS USUARIOS JM.</p>
+      A LOS USUARIOS.</p>
     <nav>
       <a href="https://www.facebook.com/sandra.delaa.737/" target="_blank" title="Facebook">
         <i class="fab fa-facebook"></i>
