--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Consultorio Dental Integral "De La A Dental Center"</title>
   <meta name="description" content="Bienvenid@s a #ProgramadorFitness, serie de videos, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo. Recuerda... mente sana en cuerpo sano :)">
 
-  <meta name="theme-color" content="#F0DB4F">
+  <meta name="theme-color" content="#0fd6cdf5">
   <meta name="MobileOptimized" content="width">
   <meta name="HandheldFriendly" content="true">
   <meta name="apple-mobile-web-app-capable" content="yes">
