--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
       <a href="delaa.dentalcenter@gmail.com" target="_blank" title="Correo">
         <i class="fas fa-envelope"></i>
       </a>
+      <a href="https://www.facebook.com/messages/t/sandra.delaa.733/" target="_blank" title="Correo">
+        <i class="fab fa-facebook-messenger"></i>
+      </a>
+      <a href="login.html" target="_blank" title="Ingresar">
+        <i>Ingresar</i>
+      </a>
     </nav>
-    <p href="login.html"> Ingresar </p>
+
   </header>
   <script src="./script.js"></script>
 </body>
