--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="https://www.instagram.com/sandra.delaa.737/" target="_blank" title="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="delaa.dentalcenter@gmail.com" target="_blank" title="Correo">
+      <a href="mailto:delaa.dentalcenter@gmail.com" target="_blank" title="Correo">
         <i class="fas fa-envelope"></i>
       </a>
       <a href="https://www.facebook.com/messages/thread/100032089756291/" target="_blank" title="Correo">
