--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <a href="mailto:delaa.dentalcenter@gmail.com" target="_blank" title="Correo">
         <i class="fas fa-envelope"></i>
       </a>
-      <a href="https://www.facebook.com/messages/thread/100032089756291/" target="_blank" title="Correo">
+      <a href="https://m.me/sandra.delaa.737/" target="_blank" title="Correo">
         <i class="fab fa-facebook-messenger"></i>
       </a>
       <a href="login.html" target="_blank" title="Ingresar">
